# lua-compartmentalisation

./: .gitignore  CMakeLists.txt
include/: compartment.h  manager.h  mem_mng.h
src/: CMakeLists.txt  Coding.vim  compartment.c  manager.c  mem_mng.c
tests/: CMakeLists.txt  bound_ddc.c  hello_world_comps.c  hello_world_elf.c  hello_world_wrap.c  producer_consumer_mem.c  producer_consumer_mem.h  simple.c  simple2.c  t.c
